--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ header {
   transform: rotate(45deg);
 }
 
+.logo-link {
+  display: contents;
+}
+
 #top-nav {
   display: none;
 }
@@ -100,9 +104,9 @@ header {
   line-height: 17px;
   letter-spacing: -0.01em;
   text-align: left;
-  border: 4px solid #fff;
+  border: 3px solid #fff;
   margin: 1%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .banner-text p {
@@ -273,6 +277,7 @@ header {
   letter-spacing: -0.02em;
   text-align: left;
   color: #f78c89;
+  text-decoration: underline;
 }
 
 .speaker-img {
@@ -281,7 +286,7 @@ header {
 
 .speaker-description {
   font-family: 'Lato', sans-serif;
-  font-size: 9px;
+  font-size: 13px;
   font-weight: 700;
   line-height: 14px;
   letter-spacing: -0.06em;
@@ -323,6 +328,7 @@ header {
   letter-spacing: -0.06em;
   text-align: center;
   padding: 3%;
+  color: #000;
 }
 
 .textcontent-3 {
@@ -497,7 +503,15 @@ header {
   }
 
   #text1 {
-    font-weight: 300;
+    font-weight: 100;
+  }
+
+  #text2 {
+    font-weight: 900;
+  }
+
+  #top-nav {
+    display: block;
   }
 
   .top-nav-list {
@@ -634,6 +648,10 @@ header {
     display: none;
   }
 
+  .program-text2 {
+    text-align: center;
+  }
+
   .speakers-breaker {
     width: 4%;
     margin-left: 48%;
@@ -736,30 +754,49 @@ header {
   }
 
   .about-logo {
-    width: 21%;
-    margin-left: 30%;
+    width: fit-content;
+    margin-left: 36%;
+    padding: 3%;
+  }
+
+  .past-event-summit-frame1 {
+    margin: 1%;
   }
 
   .past-event-summit-frame2 {
     flex-direction: row;
-    width: fit-content;
-    padding: 1%;
-    margin-left: 26%;
+    padding: 3%;
+    margin-left: 0%;
+    gap: 10%;
   }
 
   .summit-image {
     background-image: url(img/images-6.jpeg);
-    background-size: contain;
-    height: 221px;
-    width: 300px;
+    background-size: inherit;
+    height: 191px;
+    width: 250px;
     background-color: rgba(255, 0, 0, 0.5);
     background-blend-mode: color-dodge;
     background-repeat: no-repeat;
+    margin-bottom: 4%;
   }
 
   .summit-image p {
     color: #fff;
     text-align: center;
-    line-height: 5;
+    line-height: 3;
+  }
+
+  .about-footer {
+    background-color: #2e2e2e;
+    text-decoration: #fff;
+  }
+
+  .footer-credit {
+    color: #fff;
+  }
+
+  #home-credit {
+    color: #000;
   }
 }
