--- a/styles.css
+++ b/styles.css
@@ -108,11 +108,11 @@ header {
   text-align: left;
   border: 3px solid #fff;
   margin: 1%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(232, 232, 232, 0.9);
 }
 
 .banner-text p {
-  color: #fff;
+  color: #000;
 }
 
 .banner-date {
